# Vagabond

./: .gitignore  README.md
client/: CMakeLists.txt  README.md  resources.qrc
client/src/: authentication.cpp  authentication.h  chat.cpp  chat.h  dxgi_capture.cpp  dxgi_capture.h  frame_encode_worker.cpp  frame_encode_worker.h  h264_decoder.cpp  h264_decoder.h  h264_encoder.cpp  h264_encoder.h  history.cpp  history.h  livekit_room_widget.cpp  livekit_room_widget.h  livekit_window.cpp  livekit_window.h  main.cpp  message_protocol.cpp  message_protocol.h  screen_share.cpp  screen_share.h  types.h  video_view.cpp  video_view.h  voice.cpp  voice.h  window.cpp  window.h
protocol/: README.md  protocol.md  udp_migration.md
scripts/: install-qt-linux.sh
server/: CMakeLists.txt  README.md
server/src/: authentication.cpp  authentication.h  chat.cpp  chat.h  history.cpp  history.h  main.cpp  message_protocol.cpp  telegrambot.cpp  telegrambot.h  telegramlinks.cpp  telegramlinks.h  types.h
